fix: spacing between elements of footer section

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ footer {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  height: 10rem;
+  min-height: 10rem;
   margin-top: 4em;
 }
 
@@ -245,15 +245,17 @@ footer .download .download-btn {
   footer .footer-feature-2 {
     flex-basis: 33.33%;
     font-size: 1rem;
+    padding-top: 1em;
   }
 
   footer .download {
     flex-basis: 33.33%;
+    padding-top: 1em;
   }
 }
 
 @media (max-width: 576px) {
-  .banner{
+  .banner {
     margin-bottom: 1em;
   }
   .gallery-grid {
